logic - inbox - rendering mails

--- a/app/test.html
+++ b/app/test.html
@@ -1,20 +1,32 @@
+<div class='mail'>
+  <div class='mail__header'>
+    <span></span>
+    <img src='./images/inbox/introduce.jpg' />
+  </div>
+  <h2 class='mail__title'>Welcome in MONSTER HUNTER</h2>
+  <div class='mail__content'>
+    <p>
+      Welcome in Monster Hunter game.
+      When I was creating this game I inspired by the popular game <a
+        href='https://www.sfgame.pl/?cid=sfplplgoaw1604&gclid=Cj0KCQjw4eaJBhDMARIsANhrQADuLkuKG0YLRh-qbLEu67m2WDZEe-nyvd-qRFAhKF2hyFs34AWd8x8aAuBjEALw_wcB'
+        target='_blank'> Shakes & Fidget.</a>
+      I hope you have fun and enjoy your time here.
 
-
-
-<div class='friends__item'> 
-
-    <div class='friend'> 
-      <div class='friend__portraitWrapper'>
-        <img src='./images/hero_portraits/human_1.png' alt='portait' class='friend__portrait'/>
-      </div>
-      <h2 class='friend__name'>MMMMMMMMMMMMMMMM</h2>
-      <div class='friend__actionBar'> 
-      <div class='friend__actionBtn friend__actionBtn-profile'> 
-        <img src='./images/menu_profile.png' class='friend__icon'/> Profile
-      </div>  
-      <div class='friend__actionBtn friend__actionBtn-chat'> 
-      <img src='./images/friends_message_icon.png' class='friend__icon'/> Chat
+    </p>
+    <div>
+      <h3>Contact</h3>
+      <ul>
+        <li><a href='https://discord.com/channels/873119072613707776/873119072613707778' target='_blank'><i
+              class="fab fa-discord"></i> My discord server </a></li>
+        <li><a href='https://www.facebook.com/dominik.orzechowski.1088' target='_blank'><i class="fab fa-facebook"></i>
+            Contact with me directly by facebook </a></li>
+        <li><a href='https://www.linkedin.com/in/dominik-orzechowski-2aa553212/' target='_blank'><i
+              class="fab fa-linkedin"></i> Linkedin profile </a></li>
+      </ul>
     </div>
-      </div>
-</div>
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo ipsam, debitis dolores, at mollitia reiciendis quisquam dolorem commodi alias quae perspiciatis. Quaerat veritatis iste qui iusto cupiditate corrupti consequatur corporis distinctio adipisci at debitis eos accusamus deleniti, ipsa provident fugit tenetur eveniet? Commodi perferendis porro tenetur architecto iste odio quidem!
+    <p>
+      <strong>Enjoy your game :)</strong>
+    </p>
+
+
+  </div>
