--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
       <div class='loading'>
          
         <div class='loading__content'>
-          <div class='loading__circle'> </div>
+          
           <img class='loading__monster'/>
+          <img class='loading__img' src="./images/loading.png"/> 
         </div>
-        <h2 class='loading__title'>Loading...</h2>
+
       </div>
     </main>
   </div>
