media - ipadPro  - toogling nav  menu

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 
       </div>
     </main>
+
+    <div class='mobileNav'>
+      <img src='./images/menu.png' class='mobileNav__icon'/>
+      <h1 class="nav__titleWrapper">Monster <br> Hunter</h1>
+    </div>
   </div>
   <script src="build/style.js"></script>
   <script src="build/index.js"></script>
