--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
     <div class='mobileNav'>
       <img src='./images/menu.png' class='mobileNav__icon'/>
       <h1 class="nav__titleWrapper">Monster <br> Hunter</h1>
+      <!-- <div class='mobileNav__content'>
+         <div class='mobileNav__item'>
+
+         </div>
+      </div> -->
     </div>
   </div>
   <script src="build/style.js"></script>
