--- a/app/test.html
+++ b/app/test.html
@@ -1,32 +1,3 @@
-<div class='mail'>
-  <div class='mail__header'>
-    <span></span>
-    <img src='./images/inbox/introduce.jpg' />
-  </div>
-  <h2 class='mail__title'>Welcome in MONSTER HUNTER</h2>
-  <div class='mail__content'>
-    <p>
-      Welcome in Monster Hunter game.
-      When I was creating this game I inspired by the popular game <a
-        href='https://www.sfgame.pl/?cid=sfplplgoaw1604&gclid=Cj0KCQjw4eaJBhDMARIsANhrQADuLkuKG0YLRh-qbLEu67m2WDZEe-nyvd-qRFAhKF2hyFs34AWd8x8aAuBjEALw_wcB'
-        target='_blank'> Shakes & Fidget.</a>
-      I hope you have fun and enjoy your time here.
-
-    </p>
-    <div>
-      <h3>Contact</h3>
-      <ul>
-        <li><a href='https://discord.com/channels/873119072613707776/873119072613707778' target='_blank'><i
-              class="fab fa-discord"></i> My discord server </a></li>
-        <li><a href='https://www.facebook.com/dominik.orzechowski.1088' target='_blank'><i class="fab fa-facebook"></i>
-            Contact with me directly by facebook </a></li>
-        <li><a href='https://www.linkedin.com/in/dominik-orzechowski-2aa553212/' target='_blank'><i
-              class="fab fa-linkedin"></i> Linkedin profile </a></li>
-      </ul>
-    </div>
-    <p>
-      <strong>Enjoy your game :)</strong>
-    </p>
-
-
-  </div>
+<div class='inbox__closeMail'> 
+  <img src='./images/close.png' />
+   </div>
