--- a/login.html
+++ b/login.html
@@ -16,12 +16,21 @@
     href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap"
     rel="stylesheet">
   <style>
-    body {
-      background-image: url(./images/summer_landscape.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
+    html {
       height: 100vh;
-      width: 100%;
+    }
+
+    body {
+    
+      background: url(./images/summer_landscape.jpg) no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+
+    body::-webkit-scrollbar {
+      width: 0;
     }
   </style>
 </head>
@@ -116,7 +125,7 @@
             <div class="tower"></div>
           </div>
 
-  
+
 
         </form>
       </div>
@@ -134,19 +143,19 @@
 
           <strong class=" auth__notification auth__notification-error" id="passwordReset-invalidData"></strong>
           <strong class=" auth__notification auth__notification-correct" id="passwordReset-correctData"></strong>
-          
-            <div class="auth__submitWrapper">
-              <div class="tower"></div>
-              <div class="wall">
-                <button id="btn__resetPassword" type="button">Reset password </button>
-                <div class="auth__loading"></div>
-              </div>
-              <div class="tower"></div>
-            </div>
 
-            <div class="recoverPassword" id="auth-backToForms">
-              Back
+          <div class="auth__submitWrapper">
+            <div class="tower"></div>
+            <div class="wall">
+              <button id="btn__resetPassword" type="button">Reset password </button>
+              <div class="auth__loading"></div>
             </div>
+            <div class="tower"></div>
+          </div>
+
+          <div class="recoverPassword" id="auth-backToForms">
+            Back
+          </div>
 
 
 
@@ -156,11 +165,11 @@
   </main>
 
   <div class="auth__freepikAttribute">
-    <a href='https://www.freepik.com/vectors/summer' target="_black">Summer vector created by upklyak - www.freepik.com</a>
+    <a href='https://www.freepik.com/vectors/summer' target="_black">Summer vector created by upklyak -
+      www.freepik.com</a>
   </div>
   <script src="build/style.js"></script>
   <script src="build/signIn.js"></script>
 </body>
-0
-</html>
 
+</html>
