logic - auth forms - toggling between forms

--- a/login.html
+++ b/login.html
@@ -70,6 +70,10 @@
             </div>
           </div>
 
+          <div class='auth__switchBtn' id='login-switch'> 
+            Switch to register form
+         </div>
+
           <div class="recoverPassword" id="auth-forgotPassword">
             I forgot my password
           </div>
@@ -125,6 +129,9 @@
             <div class="tower"></div>
           </div>
 
+          <div class='auth__switchBtn' id='register-switch'> 
+             Switch to login form
+          </div>
 
 
         </form>
