improvements - auth - general

--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
           <div class="auth__inputWrapper">
 
             <label>Nickname
-              <input type="email" name="nickname" placeholder="Nickname">
+              <input type="email" name="nickname" placeholder="Nickname" maxlength="10">
             </label>
             <span class="register__requirement" id="register__invalidData-nickname">*Nickname should be at least 4
               characters long.</span>
