--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://kit.fontawesome.com/17383ce736.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class='game__body'>
   <div class="game__root">
     <nav class="nav">
       <h1 class="nav__titleWrapper">Monster <br> Hunter</h1>
@@ -83,6 +83,9 @@
         </li>
 
       </ul>
+      <div id='freepik-attribute'>
+asd
+      </div>
     </nav>
 
     <main class='game__contentContainer'>
