--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scale=1.0,  user-scalable=no" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <meta name="description"
     content="Become a monster hunter and go to help those in need, see if you can handle this challenge?. A lot of fun is waiting for you">
