--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scale=1.0,  user-scalable=no" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <meta name="description"
     content="Become a monster hunter and go to help those in need, see if you can handle this challenge?. A lot of fun is waiting for you">
-  <link rel="icon" type="image/png" href="images/page_icon.png">
+  <link rel="icon" type="image/png" href="../images/page_icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
@@ -16,30 +16,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./dist/index.css" type="text/css">
-
-  <style>
-    html {
-      height: 100vh;
-    }
-
-    body {
-      background: url(images/summer_landscape.jpg) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-    }
-
-    body::-webkit-scrollbar {
-      width: 0;
-    }
-  </style>
-  
+  <link rel="stylesheet" href="../dist/index.css" type="text/css">  
 </head>
 
 <body>
-  <main>
+  <main class="auth">
+    <div>
     <h1 class="auth__title">Your journey begins here</h1>
 
     <div class="auth__container">
@@ -168,15 +150,17 @@
       </div>
 
     </div>
+  </div>
 
-  </main>
-
-  <div class="auth__freepikAttribute">
+   <div class="auth__freepikAttribute">
     <a href='https://www.freepik.com/vectors/summer' target="_black">Summer vector created by upklyak -
       www.freepik.com</a>
   </div>
+  </main>
 
-  <script src="./dist/auth.js"></script>
+ 
+
+  <script src="../dist/auth.js"></script>
 </body>
 
 </html>
